--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -1,11 +1,11 @@
 <div class="crowdalert">
 <div id="crowdpage"> Crowd-O-Meter </div>
 <div id="crowd"> High: Packed like Sardines </div>
-<div id="time"> 2:10PM </div>
-<div id="bttitle"> BEST TIME: <br> </div> 
+<div id="time"> </div>
+<!--<div id="bttitle"> BEST TIME: <br> </div> 
 <div id="besttime"> before 9:30am + after 4:00pm </div>
 <div id="wttitle"> WORST TIME: <br> </div> 
-<div id="worsttime">BETWEEN 11:00AM-2:30PM </div>
+<div id="worsttime">BETWEEN 11:00AM-2:30PM </div>-->
 <div id="hottiealert"> Hottie Alert: <img src="/images/heart.png" class="img-responsive"> <img src="/images/heart.png" class="img-responsive"> <img src="/images/heart.png" class="img-responsive"> </div>
 </div>
 
