--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -5,10 +5,36 @@
 		<div id="youcan">{{youcan}}</div>
 		<div id="youcancontent">{{youcancontent}}</div>
 	</div>	
-	<div id="actlist"> <table style="width:65px" align="center">
-		<tr><td id="actname">{{actname}}</td></tr>
-		<tr><td id="votes">{{votes}}</td></tr>
-	</table></div>
+	<div class="actlist"> 
+		<div id="activity"> 
+			<div id="swim">Swimming</div>
+			<div id="votes">3 Votes</div>
+		</div>
+		<div id="activity"> 
+			<div id="run">Running</div>
+			<div id="votes">6 Votes</div>
+		</div>
+		<div id="activity"> 
+			<div id="surf">Surfing</div>
+			<div id="votes">8 Votes</div>
+		</div>
+		<div id="activity">
+			<div id="kayak">Kayaking</div>
+			<div id="votes">1 Vote</div>
+		</div>
+		<div id="activity">
+			<div id="scuba">Scuba Diving</div>
+			<div id="votes">1 Vote</div>
+		</div>
+		<div id="activity">
+			<div id="fire">Bonfire</div>
+			<div id="votes">4 Votes</div>
+		</div>
+		<div id="activity">
+			<div id="volleyball">Volleyball</div>
+			<div id="votes">7 Votes</div>
+		</div>
+	</div>
 
 <div id="suggest"><a href="#">Suggest Activity</a></div>
 </div>
@@ -33,7 +59,15 @@
 	font-size:20px;
 }
 #actlist{
-
+width:100%;
+}
+#activity{
+	width:50%;
+	float:left;
+}
+#votes{
+	width:50%;
+	float:right;
 }
 </style>
 <script>
