--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -1,5 +1,5 @@
 <div class="headline">
-<div class="arrow"><a href="/"><img src="/images/arrowicon.png"></a></div><div class="pagename">{{beachname}}</div>
+<div class="arrow"><a href="/"><img src="/images/arrowicon.png"></a></div><div class="pagename">Beach List</div>
 <div class="home"><a href="#"><img src="/images/homeicon.png"></a></div></div>
 <div class="button" id="blist">	
 	<ul>
