--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -7,32 +7,32 @@
 	</div>	
 	<div class="actlist"> 
 		<div id="activity"> 
-			<div id="swim">Swimming</div>
-			<div id="votes">3 Votes</div>
+			<div id="name">Swimming</div>
+			<div id="count">3 Votes</div>
 		</div>
 		<div id="activity"> 
-			<div id="run">Running</div>
-			<div id="votes">6 Votes</div>
+			<div id="name">Running</div>
+			<div id="count">6 Votes</div>
 		</div>
 		<div id="activity"> 
-			<div id="surf">Surfing</div>
-			<div id="votes">8 Votes</div>
+			<div id="name">Surfing</div>
+			<div id="count">8 Votes</div>
 		</div>
 		<div id="activity">
-			<div id="kayak">Kayaking</div>
-			<div id="votes">1 Vote</div>
+			<div id="name">Kayaking</div>
+			<div id="count">1 Vote</div>
 		</div>
 		<div id="activity">
-			<div id="scuba">Scuba Diving</div>
-			<div id="votes">1 Vote</div>
+			<div id="name">Scuba Diving</div>
+			<div id="count">1 Vote</div>
 		</div>
 		<div id="activity">
-			<div id="fire">Bonfire</div>
-			<div id="votes">4 Votes</div>
+			<div id="name">Bonfire</div>
+			<div id="count">4 Votes</div>
 		</div>
 		<div id="activity">
-			<div id="volleyball">Volleyball</div>
-			<div id="votes">7 Votes</div>
+			<div id="name">Volleyball</div>
+			<div id="count">7 Votes</div>
 		</div>
 	</div>
 
@@ -58,10 +58,10 @@
 #youcancontent{
 	font-size:20px;
 }
-#actlist{
+.actlist{
 width:100%;
 }
-#activity{
+#name{
 	width:50%;
 	float:left;
 }
