--- a/public/css/index.css
+++ b/public/css/index.css
@@ -12,7 +12,7 @@ body{
 }
 /* #### Desktops #### */
 @media screen {/*and(min-device-width: 768px){*/
-.container{width:400px;}}
+.container{width:400px;/*background-color: RGBA(255,255,255,.3);*/}}
 /* #### Mobile Phones Portrait #### */
 @media screen and (max-device-width: 480px) and (orientation: portrait){
 .container{/*width:480px;*/
@@ -38,6 +38,7 @@ body{
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px){
  .container{/*width:768px;*/
 	width:100%; /*standard width*/
+	background-color: RGBA(255,255,255,.3);
 }}
 .button{
 	margin:5px 0;
