--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -1,31 +1,37 @@
 <div class="crowdalert">
 <div id="crowdpage"> Crowd-O-Meter </div>
+<div id="crowdtime"> </div>
 <div id="crowd"> High: Packed like Sardines </div>
-<div id="time"> </div>
-<!--<div id="bttitle"> BEST TIME: <br> </div> 
-<div id="besttime"> before 9:30am + after 4:00pm </div>
-<div id="wttitle"> WORST TIME: <br> </div> 
-<div id="worsttime">BETWEEN 11:00AM-2:30PM </div>-->
-<div id="hottiealert"> Hottie Alert: <img src="/images/heart.png" class="img-responsive"> <img src="/images/heart.png" class="img-responsive"> <img src="/images/heart.png" class="img-responsive"> </div>
 
+<div id="hottiealert"> Hottie Alert: <img src="/images/heart.png" class="img-responsive"> <img src="/images/heart.png" class="img-responsive"> <img src="/images/heart.png" class="img-responsive"><img src="/images/heart.png" class="img-responsive"> </div>
+</div>
+<div style="clear: both;"></div>
 
 {{#with crowd}}
 <div id="crowdstatus">{{status}}</div>
-<div id="lastupdate">{{lastupdate}}</div>
+<div id="lastupdate">last update: {{lastupdate}}</div>
 {{/with}}
-<div class="button" id="low"><a href="#">Low</a></div>
-<div class="button" id="med"><a href="#">Medium</a></div>
-<div class="button" id="high"><a href="#">High</a></div>
-
+<div class="crowddiv">
+<div class="buttonppl" id="lcrowd"><a href="#"> Crown Alert: <img src="/images/1person.png" class="img-responsive"></a></div>
+<div class="buttonppl" id="mcrowd"><a href="#"><img src="/images/2person.png" class="img-responsive"></a></div>
+<div class="buttonppl" id="hcrowd"><a href="#"><img src="/images/3person.png" class="img-responsive"></a></div>
 </div>
 
 <style>
+#crowdstatus{
+	font-size: 30px;
+	text-align: center;
+}
+#lastupdate{
+	font-size: 20px;
+	text-align: center;
+}
 .crowdalert{text-align: center;letter-spacing: 0px;}
 #hottiealert img{
 	width:12%;
 	height: 12%;
 	float: right;
-	margin-right: 0px;
+	margin-right: 10px;
 }
 #crowdpage{
 	/*color: #2a6496;*/
@@ -36,28 +42,40 @@
 	color: #ef4444;
 	font-size: 35px;
 }
-#time{
-	font-size: 30px;
+#crowdtime{
+	font-size: 35px;
 }
-#bttitle{
-	font-size: 27px;
-}
-#besttime{
-	font-size: 25px;
-}
-#wttitle{
-	font-size: 27px;
-}
-#worsttime{
-	font-size: 25px;
-}
+
 #hottiealert{
 	font-size: 27px;
 }
+#lcrowd{
+	float: left;
+	width: 15%;
+	font-size: 27px;
+	color: black;
+}
+#mcrowd{
+	float: left;
+	width: 15%;
+}
+#hcrowd{
+	float: left;
+	width: 15%;
+}
+.buttonppl{
+
+}
+.crowddiv{
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
 </style>
 <script type="text/javascript">
 //this portion of the script gets the current time
-$("div #time").html("<p>"+getRealtime()+"</p>");
+$("div #crowdtime").html("<p>"+getRealtime()+"</p>");
 
 $(document).ready(function(){
 	$("#low a").click(function(){loadMainContent("/updatedcrowd/{{name}}/low");});
