--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -3,11 +3,11 @@
 <div class="home"><a href="#"><img src="/images/homeicon.png"></a></div></div>
 <div class="button" id="blist">	
 	<ul>
-		<li><div class="button" id="LaJolla"><a href="#">La Jolla Shores </a><img class="img-responsive" src="/images/sun.png"></div></li>
-		<li><div class="button" id="Oceanside"><a href="#"> Oceanside Beach</a><img class="img-responsive" src="/images/overcast.png"></div></li>
-		<li><div class="button" id="pb"><a href="#"> Pacific Beach</a><img class="img-responsive" src="/images/sun.png"></div></li>
-		<li><div class="button" id="Coronado"><a href="#"> Coronado Beach</a><img class="img-responsive" src="/images/sunclouds1.png"></div></li>
-		<li><div class="button" id="MissionBay"><a href="#">Mission Bay</a><img class="img-responsive" src="/images/rain.png"></div></li>
+		<li><div class="button" id="LaJolla"><a href="#">La Jolla Shores </a><img class="img-responsive" src="/images/2person.png"></div></li>
+		<li><div class="button" id="Oceanside"><a href="#"> Oceanside Beach</a><img class="img-responsive" src="/images/2person.png"></div></li>
+		<li><div class="button" id="pb"><a href="#"> Pacific Beach</a><img class="img-responsive" src="/images/2person.png"></div></li>
+		<li><div class="button" id="Coronado"><a href="#"> Coronado Beach</a><img class="img-responsive" src="/images/2person.png"></div></li>
+		<li><div class="button" id="MissionBay"><a href="#">Mission Bay</a><img class="img-responsive" src="/images/2person.png"></div></li>
 	</ul>
 </div>
 
