--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -1,6 +1,6 @@
 <div class="headline">
 <div class="arrow"><a href="/"><img src="/images/arrowicon.png"></a></div><div class="pagename">{{beachname}}</div>
-<div class="home"><a href="#"><img src="/images/homeicon.png"></a></div></div>
+</div>
 <div class="button" id="blist">	
 	<ul>
 		<li><div class="button" id="LaJolla"><a href="#">La Jolla Shores </a><img class="img-responsive" src="/images/sun.png"></div></li>
