--- a/views/beachlist.handlebars
+++ b/views/beachlist.handlebars
@@ -1,5 +1,5 @@
 <div class="headline">
-<div class="arrow"><a href="/"><img src="/images/arrowicon.png"></a></div><div class="pagename">Beach List</div>
+<div class="arrow"><a href="/"><img src="/images/arrowicon.png"></a></div><div class="pagename">Beach List</div></div>
 <div class="button" id="blist">	
 	<ul>
 		<li><div class="button" id="LaJolla"><a href="#">La Jolla Shores </a><img class="img-responsive" src="/images/2person.png"></div></li>
