--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -44,13 +44,8 @@
 	font-size: 35px;
 	margin-bottom: 5px;
 }
-#crowdtime{
-	font-size: 35px;
-}
-
-#hottiealert{
-	font-size: 27px;
-}
+#crowdtime{font-size: 35px;}
+#hottiealert{font-size: 27px;}
 #lcrowd img{
 	float: right;
 	width: 12%;
@@ -65,10 +60,7 @@
 	float: right;
 	width: 12%;
 }
-.buttonppl{
-}
-
-
+.buttonppl{}
 </style>
 <script type="text/javascript">
 //this portion of the script gets the current time
