--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -9,19 +9,10 @@
 </div>
 
 <style type="text/css">
-#address{
-font-size:15px;
-}
-#mapimg{
-  padding:10px;
-}
-
-#location{
-  font-size:25px;
-}
-#locationcontent{
-  font-size:20px;
-}
+#address{font-size:15px;}
+#mapimg{padding:10px;}
+#location{font-size:25px;}
+#locationcontent{font-size:20px;}
 </style>
 
 
