--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -1,15 +1,11 @@
 <div class="activitypage">
-	<div class="bestact">
-		<div id="acticon"><img src="/images/sun.png"></div>
-		<div id="bestact">{{bestact}}</div>
-		<div id="youcan">{{youcan}}</div>
-		<div id="youcancontent">{{youcancontent}}</div>
-	</div>	
+	<div id="pagetitle"> beach lookout </div>
+	<div id="acticon"><img src="/images/sun.png"></div>	
 	<div class="actlist"> 
 	{{#each activity}}
 	<div id="activity"> 
 			<div id="name">{{name}}</div>
-			<div id="count">{{count}} Votes</div>
+			<div id="count">{{count}} Counts </div>
 		</div>
 		{{/each}}
 <!--
@@ -44,7 +40,7 @@
 		-->
 	</div>
 
-<div id="suggest"><a href="#">Suggest Activity</a></div>
+<div class="button" id="suggest"><a href="#">Suggest Activity</a></div>
 </div>
 
 
@@ -53,12 +49,21 @@
  	font-size:25px;
  	text-align:center;
  }
+ #pagetitle{
+ 	padding-top:5px;
+ 	font-size:40px;
+ 	letter-spacing: 1.5px
+ }
  #acticon{
  	width: 60%;
+ 	margin-left:auto;
+	margin-right:auto;
+
  }
 #bestact{
 	font-size:30px;
 	padding-bottom:5px;
+
 }
 #youcan{
 	font-size:25px;
@@ -76,6 +81,17 @@ width:100%;
 #votes{
 	width:50%;
 	float:right;
+}
+#suggest{
+padding-top:5px;
+font-size: 27px;
+font-color:#333333;
+height: 40px; /* height for all three buttons on front page*/
+width:170px;
+background: none;
+margin-left:auto;
+margin-right:auto;
+
 }
 </style>
 <script>
