Top Nav Bar text and alignment

--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -48,6 +48,8 @@
 .activitypage{
  	font-size:25px;
  	text-align:center;
+ 	margin-left:auto;
+ 	padding-right:50px;
  }
  #pagetitle{
  	padding-top:5px;
