--- a/views/beach.handlebars
+++ b/views/beach.handlebars
@@ -2,7 +2,7 @@
 
 <div class="beachcontent">
 <div class="headline">
-<div class="arrow"><a href="#"><img src="/images/arrowicon.png"></a></div><div class="pagename">{{beachname}}</div>
+<div class="arrow"><a href="#"><img src="/images/arrowicon.png"></a></div><div class="pagename" id="topnavname">{{beachname}}</div>
 <div class="home"><a href="#"><img src="/images/homeicon.png"></a></div></div>
 
 <div style="clear:both;"></div>
