--- a/public/css/beach.css
+++ b/public/css/beach.css
@@ -15,6 +15,10 @@
 	z-index: 2;
 	color:#2a6496; 
 }
+#topnavname{
+	padding-left:50px;
+	font-size:40px;
+}
 .headline{
 	width:100%;
 	margin-bottom: 2%;
@@ -58,7 +62,7 @@ div .sbcontent{
 	font-family:'Sintony'; 
 }
 .sidebar{
-	width:15%;
+	width:9%;
 	position:absolute;
 	float:left;
 	z-index: 2;
