side bar now has current pge

--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -9,7 +9,6 @@
 		</div>
 		{{/each}}
 	</div>
-
 <div class="button" id="suggest"><a href="#">Suggest Activity</a></div>
 </div>
 
@@ -30,22 +29,14 @@
  	width: 60%;
  	margin-left:auto;
 	margin-right:auto;
-
  }
 #bestact{
 	font-size:30px;
 	padding-bottom:5px;
-
 }
-#youcan{
-	font-size:25px;
-}
-#youcancontent{
-	font-size:20px;
-}
-.actlist{
-width:100%;
-}
+#youcan{font-size:25px;}
+#youcancontent{font-size:20px;}
+.actlist{width:100%;}
 #name{
 	width:50%;
 	float:left;
