--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -9,6 +9,12 @@
 </div>
 
 <style type="text/css">
+.map{
+  margin-left:auto;
+ /* padding-right:50px;*/
+  letter-spacing: 1.5px;
+  padding-top:15px;
+}
 #address{font-size:15px;}
 #mapimg{padding:10px;}
 #location{font-size:25px;}
