--- a/public/css/surf.css
+++ b/public/css/surf.css
@@ -1,16 +1,20 @@
+.surfdata{
+		margin-left:auto;
+/* 	padding-right:50px;*/
+}
 .comment{
 	text-align: center;
 	font-size: 40px;
 	/*color: #2A6496;*/
-	margin-bottom: 5%;
-	padding-top: 10%;
+	margin-bottom: 5px;
+	padding-top: 15px;
 }
 .height{
 	text-align: center;
-	font-size: 40px;
+	font-size: 50px;
 	/*color: #ef4444;*/
-	padding-top: 6px;
-	padding-bottom: 6px;
+	padding-top: 15px;
+	padding-bottom: 20px;
 	letter-spacing: 2px;
 
 }
@@ -18,20 +22,22 @@
 	text-align: center;
 	font-size: 25px;
 	letter-spacing: 2px;
+	padding-top:5px;
 }
 .low{
 	text-align: center;
 	font-size: 25px;
 	letter-spacing: 2px;
+	padding-bottom:15px;
 
 }
 .wind{
-	text-align: left;
+	text-align: center;
 	font-size: 25px;
-	float: left;
+	letter-spacing: 2px;
 }
 .h2o{
-	text-align: right;
+	text-align: center;
 	font-size: 25px;
-	float: right;
+	letter-spacing: 2px;
 }
