--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -1,6 +1,6 @@
 <div class="activitypage">
-	<div id="pagetitle"> beach lookout </div>
-	<div id="acticon"><img src="/images/sun.png"></div>	
+	<div id="pagetitle"> Activity Tracker </div>
+	<div id="activityicon"><img src="/images/sun.png"></div>	
 	<div class="actlist"> 
 	{{#each activity}}
 	<div id="activity"> 
@@ -9,7 +9,7 @@
 		</div>
 		{{/each}}
 	</div>
-<div class="button" id="suggest"><a href="#">Suggest Activity</a></div>
+<div class="button" id="suggest"><a href="#">Track Beach Activity</a></div>
 </div>
 
 
@@ -18,15 +18,16 @@
  	font-size:25px;
  	text-align:center;
  	margin-left:auto;
- 	padding-right:50px;
+ 	/*padding-right:50px;*/
+ 	letter-spacing: 1.5px;
  }
  #pagetitle{
- 	padding-top:5px;
+ 	padding-top:15px;
  	font-size:40px;
  	letter-spacing: 1.5px
  }
- #acticon{
- 	width: 60%;
+ #activityicon{
+ 	height: 115px;
  	margin-left:auto;
 	margin-right:auto;
  }
