--- a/views/beach.handlebars
+++ b/views/beach.handlebars
@@ -35,7 +35,7 @@ function loadSurf(){
 	$(currentPage).attr('src',lastIcon);
 	currentPage = "#surf img";
 	lastIcon = $('#surf img').attr('src');
-	$('#surf img').attr('src','/images/rheart.png');
+	$('#surf img').attr('src','/images/surficonC.png');
 	$(".sbcontent").load("/surf/{{stringname}}",errorResponse);
 	
 }
