--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -2,6 +2,8 @@
 <div id="crowdpage"> Crowd-O-Meter </div>
 <!-- <div id="crowdtime"> </div> -->
 <div id="crowd"> High: Packed like Sardines </div>
+<!-- Medium: You can build a beach towel fort -->
+<!-- Low: Is it the zombie apocalypse?   --> 
 
 
 
