--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -3,12 +3,13 @@
 <!-- <div id="beachname"> {{beachname}} </div> -->
 
 <div id="time"> 2:10PM </div>
-<div id="temp"> 70 </div>
-<div id="icon"> <img src="/images/sunclouds1.png" class="img-responsive"></div> 
-<!-- <div id="sunrise"> Sunrise: 6:27PM </div>
-<div id="sunset"> Sunset: 6:02PM </div> -->
-<div id="highlow"> low: 59F high: 74 </div>
-<div id="weeklywe"> <table style="width:150px" align="center">
+
+<div id="icon"> <img src="/images/sunclouds1.png" class="img-responsive"></div><div id="temp"> 70 </div> 
+ 
+<div id="highlow"> high: 74 low: 59 </div>
+<div id="sunset"> Sunset: 6:02PM </div> 
+
+<!-- <div id="weeklywe"> <table style="width:150px" align="center">
 		<tr>
   			<td id="day0">W</td>
   			<td id="day1">TH</td>
@@ -27,7 +28,7 @@
         <td id="low2">69</td>
         <td id="low3">70</td>
     </tr>
-</table></div>
+</table></div> -->
 <!-- <div id="order"> </div> -->
 </div>
 
