--- a/public/css/weather.css
+++ b/public/css/weather.css
@@ -23,7 +23,7 @@ div .comment .title .height{
 	display:inline-block;
     position:absolute;
     left:20%;
-    top:20%;
+    top:10%;
     z-index:-1;
 }
 img{
@@ -33,6 +33,8 @@ img{
 #temp{
 	position: relative;
 	font-size: 60px;
+	padding-top:15%;
+	
 	padding-bottom: 15%;
 }
 
