--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -9,7 +9,7 @@
 		</div>
 		{{/each}}
 	</div>
-<div class="button" id="suggest"><a href="#">Track Beach Activity</a></div>
+<div id="suggest"><a href="#">Track Beach Activity</a></div>
 </div>
 
 
@@ -47,15 +47,13 @@
 	float:right;
 }
 #suggest{
-padding-top:5px;
-font-size: 27px;
-font-color:#333333;
+padding-top:10px;
+font-size: 30px;
 height: 40px; /* height for all three buttons on front page*/
 width:170px;
 background: none;
 margin-left:auto;
 margin-right:auto;
-
 }
 </style>
 <script>
