--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -35,6 +35,16 @@
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/beachbum.js"></script>
 <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-48659430-1', 'beachbum.herokuapp.com');
+  ga('send', 'pageview');
+
+</script>
+<script>
 var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
 //if(width > 620)
     //$('.container').css('width', "400px");
