--- a/public/css/beach.css
+++ b/public/css/beach.css
@@ -16,7 +16,7 @@
 	color: #2a6496;
 	/*color:#F0DE62;*/
 	/*background-color: #2a6496;*/
-	height: 75px;
+	height: 72px;
 
 }
 #topnavname{
@@ -33,9 +33,9 @@
   	background:#F0DE62;
 	/*background: #2a6496;/*default background color for buttons*/
 	/*background-image: url('/images/purtywood.png'); */
-	border-color: #2a6496;
+	/*border-color: #2a6496;
 	border-width: 5px;
-	border-style: solid;
+	border-style: solid;*/
 }
 /*///////////////////////////*/
 .arrow{
