--- a/views/suggestact.handlebars
+++ b/views/suggestact.handlebars
@@ -65,9 +65,7 @@ margin-right:auto;
 var beachloc = "{{name}}";
 $(document).ready(function(){
 	{{#each activity}}
-	$("a[id=\"{{name}}\"]").click(function(){
-		$.get("/addactivity/"+beachloc+"/{{name}}", function(){});
-		//loadMainContent("/addactivity/"+beachloc+"/{{name}}") });
+	$("a[id=\"{{name}}\"]").click(function(){$(".sbcontent").load("/addactivity/"+beachloc+"/{{name}}", errorResponse);
 	});
 	{{/each}}
 });
