--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -14,6 +14,10 @@
 
 
 <style type="text/css">
+
+#suggest a:link {color:red;}
+#suggest a:visited {color:red;}
+
 .activitypage{
  	font-size:25px;
  	text-align:center;
