beach name change

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
     <div class="container">
     <!-- <div class="circle" id="title"> Beach Bum</div> -->
     <img class="img-responsive" id="homeimg" src="/images/logo.png" alt="homepage logo"><br>
-    <p id="tagline"> A beach weather app.</p>
+    <p id="tagline"> Dude, where you wanna bum?</p>
     <div class="button" id="find"><a href="#">Find a Beach</a></div>
     <!--
     <div id="buttonline">
