--- a/views/updatedcrowd.handlebars
+++ b/views/updatedcrowd.handlebars
@@ -1,3 +1,9 @@
 <div>
-	Crowd has been updated! Thanks for your contribution!
+	<h2>Crowd has been updated! Thanks for contributing!</h2>
 </div>
+<script>
+var reload = setInterval(function(){
+	$(".sbcontent").load("/crowds/{{beachname}}",errorResponse);
+	clearInterval(reload);
+}, 1000);
+</script>
